add autoprefixer for IE11 and FIrefox issues, mboile font decrease
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/index.hbs
+++ b/index.hbs
@@ -298,9 +298,11 @@
                             <div class="cell shrink">
                                 <img src="./img/patrick-fine-headshot.jpg" alt="Patrick  C.  Fine  headshot" width="100" height="100">
                             </div>
-                            <div class="cell shrink grid-y align-center">
-                                <p class="h6 uppercase">A message from our CEO</p>
-                                <p class="h2 mb0">PATRICK C. FINE</p>
+                            <div class="cell shrink">
+                                <div class="grid-y align-center" style="height: 100px;">
+                                    <p class="h6 uppercase">A message from our CEO</p>
+                                    <p class="h2 mb0">PATRICK C. FINE</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -361,7 +363,7 @@
                 </div>
             </section>
             <!-- SECTION 1 # Profile: Jordan (slide 1) -->
-            <section class="section fp-tablecell-auto" data-section="1" data-toc="1" data-parallax="zoom">
+            <section class="section" data-section="1" data-toc="1" data-parallax="zoom">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Mohammad Magayda/FHI 360</h6>
@@ -485,7 +487,7 @@
                 </div>
             </section>
             <!-- SECTION 2 # Profile: Jordan (slide 2) -->
-            <section class="section fp-tablecell-auto" data-section="2" data-toc="1">
+            <section class="section" data-section="2" data-toc="1">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>As Hardworking as a Bee, Dirar Shawagfeh/FHI 360</h6>
@@ -517,7 +519,7 @@
                 </div>
             </section>
             <!-- SECTION 3 # Example: HPTN -->
-            <section class="section fp-tablecell-auto" data-section="3" data-toc="2">
+            <section class="section" data-section="3" data-toc="2">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Jessica Scranton/FHI 360</h6>
@@ -600,7 +602,7 @@
                 </div>
             </section>
             <!-- SECTION 4 # Profile: India/IVLP (slide 1) -->
-            <section class="section fp-tablecell-auto" data-section="4" data-toc="3" data-parallax="zoom2">
+            <section class="section" data-section="4" data-toc="3" data-parallax="zoom2">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Vivek Singh/The Verbatim Agency for FHI 360</h6>
@@ -721,7 +723,7 @@
                 </div>
             </section>
             <!-- SECTION 5 # Profile: India/IVLP (slide 2)-->
-            <section class="section fp-tablecell-auto" data-section="5" data-toc="3">
+            <section class="section" data-section="5" data-toc="3">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Vivek Singh/The Verbatim Agency for FHI 360</h6>
@@ -754,7 +756,7 @@
                 </div>
             </section>
             <!-- SECTION 6 # Example: Sino-implant (II) -->
-            <section class="section fp-tablecell-auto" data-section="6" data-toc="4">
+            <section class="section" data-section="6" data-toc="4">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Jessica Scranton/FHI 360</h6>
@@ -843,7 +845,7 @@
                 </div>
             </section>
             <!-- SECTION 7 # Profile: Succeed 2020 (slide 1) -->
-            <section class="section fp-tablecell-auto" data-section="7" data-toc="5" data-parallax="zoom3">
+            <section class="section" data-section="7" data-toc="5" data-parallax="zoom3">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Leanne Gray/FHI 360</h6>
@@ -972,7 +974,7 @@
                 </div>
             </section>
             <!-- SECTION 8 # Profile: Succeed 2020 (slide 2) -->
-            <section class="section fp-tablecell-auto" data-section="8" data-toc="5">
+            <section class="section" data-section="8" data-toc="5">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Leanne Gray/FHI 360</h6>
@@ -1004,7 +1006,7 @@
                 </div>
             </section>
             <!-- SECTION 9 # Example: TB -->
-            <section class="section fp-tablecell-auto" data-section="9" data-toc="6">
+            <section class="section" data-section="9" data-toc="6">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Jessica Scranton/FHI 360</h6>
@@ -1105,7 +1107,7 @@
                 </div>
             </section>
             <!-- SECTION 10 # Profile: Tanzania -->
-            <section class="section fp-tablecell-auto" data-section="10" data-toc="7" data-parallax="zoom4">
+            <section class="section" data-section="10" data-toc="7" data-parallax="zoom4">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Leanne Gray/FHI 360</h6>
@@ -1231,7 +1233,7 @@
                 </div>
             </section>
             <!-- SECTION 11 # Example: Myanmar -->
-            <section class="section fp-tablecell-auto" data-section="11" data-toc="8">
+            <section class="section" data-section="11" data-toc="8">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Maxiphoto/iStockPhoto</h6>
@@ -1337,7 +1339,7 @@
                 </div>
             </section>
             <!-- SECTION 12 # Profile: Afghanistan (slide 1) -->
-            <section class="section fp-tablecell-auto" data-section="12" data-toc="9" data-parallax="zoom3">
+            <section class="section" data-section="12" data-toc="9" data-parallax="zoom3">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Kiana Hayeri/The Verbatim Agency for FHI 360</h6>
@@ -1467,7 +1469,7 @@
                 </div>
             </section>
             <!-- SECTION 13 # Profile: Afghanistan (slide 2) -->
-            <section class="section fp-tablecell-auto" data-section="13" data-toc="9">
+            <section class="section" data-section="13" data-toc="9">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>Kiana Hayeri/The Verbatim Agency for FHI 360</h6>
@@ -1500,7 +1502,7 @@
                 </div>
             </section>
             <!-- SECTION 14 # Example: mSTAR -->
-            <section class="section fp-tablecell-auto" data-section="14" data-toc="10">
+            <section class="section" data-section="14" data-toc="10">
                 <div class="photo-credits">
                     <h6>
                         <span>Photo:</span>John O'Bryan/USAID (CC BY-ND 2.0)</h6>
@@ -1616,7 +1618,7 @@
                 </div>
             </section>
             <!-- # Learn More -->
-            <section class="section fp-tablecell-auto" data-section="15">
+            <section class="section" data-section="15">
                 <div class="bg-screen"></div>
                 <div class="grid-y align-center" style="height: 100vh;">
                     <div class="cell auto medium-9 grid-x p2">
