--- a/sass/partials/_slides.scss
+++ b/sass/partials/_slides.scss
@@ -41,7 +41,7 @@
 		}
 	}
 	.inner-frame {
-		min-height: 100vh;
+		// min-height: 100vh;
 		height: 100%;
 		padding: 100px 60px 185px 60px;
 
@@ -51,11 +51,11 @@
 	}
 
 	.slide-title h2 {
-		font-size: 40px;
+		font-size: 30px;
 		font-weight: 200;
 	}
 	.slide-subtitle h3 {
-		font-size: 30px;
+		font-size: 20px;
 		font-weight: 200;
 		color: rgba(255, 255, 255, 0.75);
 		margin-bottom: 0;
@@ -260,6 +260,10 @@
 	.h3 {
 		font-weight: 500;
 		line-height: 1.2;
+	}
+
+	.align-justify {
+		justify-content: space-evenly !important;
 	}
 }
 
