add keywords meta
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/index.hbs
+++ b/index.hbs
@@ -15,6 +15,9 @@
     />
     <meta property="og:image" content="./img/FHI360_2017AR_thumbnail.jpg" />
 
+    <meta name="keywords" content="FHI 360 Annual Report 2017,Catalyze,Global transformative change,Samira Saeed Mouawwad,Injectable cabotegravir,Yatin Thakur,Sino-implant,Jennifer Carlson,CB-DOTS,Obey Assery,Democracy in Myanmar,Yosouf Jami,Mobile money in Liberia,"
+    />
+
     <!-- Place favicon.ico in the root directory -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css">
