fix share, mobile nav
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/index.hbs
+++ b/index.hbs
@@ -74,13 +74,13 @@
                     <img src="./img/fhi-logo-tagline.svg" alt="" class="home-logo">
                 </a>
             </div>
-            <div class="cell auto hide-for-medium mobile-menu-trigger">
+            <div class="cell auto hide-for-large mobile-menu-trigger">
                 <img src="https://icon.now.sh/menu" alt="">
             </div>
             <div class="cell auto grid-y align-center nav-container">
                 <div class="grid-x grid-padding-x align-middle">
                     <ul class="cell auto menu simple main">
-                        <li class="hide-for-medium">
+                        <li class="hide-for-large">
                             <a href="http://www.google.com/search?strip=1&q=cache:www.sean-harrington.com/ar2018">Text-only version</a>
                         </li>
                         <li>
@@ -108,12 +108,12 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="cell auto" href="https://twitter.com/home?status=See Catalyst: REPLACEME.COM">
+                                <a class="cell auto" data-tw-share href="https://twitter.com/home?status=See Catalyst: REPLACEME.COM">
                                     <img width="30" src="./img/icons/twitter-icon.svg" alt="retweet">
                                 </a>
                             </li>
                             <li>
-                                <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http://developer.linkedin.com&title=LinkedIn%20Developer%20Network
+                                <a data-li-share href="https://www.linkedin.com/shareArticle?mini=true&url=http://developer.linkedin.com&title=LinkedIn%20Developer%20Network
                                     &summary=My%20favorite%20developer%20program&source=LinkedIn" class="cell auto">
                                     <img width="30" src="./img/icons/linkedin-icon.svg" alt="share on linkedin">
                                 </a>
@@ -1637,10 +1637,10 @@
                                 <a href="#" class="cell shrink" data-fb-share>
                                     <img width="30" height="30" src="./img/icons/fb-icon.svg" alt="share on facebook">
                                 </a>
-                                <a class="cell shrink" href="https://twitter.com/home?status=See Catalyst: REPLACEME.COM">
+                                <a class="cell shrink" data-tw-share href="https://twitter.com/home?status=See Catalyst: REPLACEME.COM">
                                     <img width="30" height="30" src="./img/icons/twitter-icon.svg" alt="retweet">
                                 </a>
-                                <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http://developer.linkedin.com&title=LinkedIn%20Developer%20Network
+                                <a data-li-share href="https://www.linkedin.com/shareArticle?mini=true&url=http://developer.linkedin.com&title=LinkedIn%20Developer%20Network
                                 &summary=My%20favorite%20developer%20program&source=LinkedIn" class="cell shrink">
                                     <img width="30" height="30" src="./img/icons/linkedin-icon.svg" alt="share on linkedin">
                                 </a>
