Share nav for medium screens
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/sass/partials/_mobile.scss
+++ b/sass/partials/_mobile.scss
@@ -4,6 +4,11 @@
 		display: none;
 	}
 }
+@media screen and (max-width: $medium) {
+	div#header .share-menu {
+		display: none;
+	}
+}
 @media screen and (min-width: $large) {
 	.fp-tablecell-auto .fp-tableCell {
 		height: 100% !important;
@@ -52,9 +57,6 @@
 		}
 		.nav-container {
 			align-items: flex-end;
-		}
-		.share-menu {
-			display: none;
 		}
 	}
 	.mobile-open div#header .menu.main {
