--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,9 +1,6 @@
-@import './vendor/normalize.css';
+@import './vendor/normalize.scss';
 @import './partials/_variables.scss';
 @import './partials/_main.scss';
-
 @import './partials/_slides.scss';
-
 @import './partials/_mobile.scss';
-
 @import './partials/_intro.scss';
