--- a/markup/index.hbs
+++ b/markup/index.hbs
@@ -25,7 +25,7 @@ uri: /
 
 {{#extend "base"}}
   {{#content "right-sidebar"}}
-    {{> right-sidebar}}
+    {{> TOC }} 
   {{/content}}
   {{#content "main"}}
     <nav id="up-down">
@@ -33,8 +33,11 @@ uri: /
       <img data-movedown src="../img/icons/arrowup-icon.svg" />
     </nav>
     <div id="fullpage">
-      <!-- SECTION 0 -->
+      <!-- Intro Slide -->
       {{>sections/sectionintro}} 
+      
+      <!-- SECTION 0 -->
+      {{>sections/section00}} 
 
       <!-- SECTION 1 # Profile: Jordan (slide 1) -->
       {{>sections/section01}} 
