--- a/markup/index.hbs
+++ b/markup/index.hbs
@@ -21,6 +21,66 @@ stylesheets:
   - ../scss/index.scss
 title: CATALYZE FHI 360's 2017 Annual Report
 uri: /
+toc_titles:
+  - desktop: A beekeeper uses new skills to build a thriving business in Jordan
+    mobile: A beekeeper in Jordan builds her business
+    moveto: 3
+    href: #one
+    toc: 1
+
+  - desktop: Long-acting injection shows promise for HIV prevention
+    mobile: Long-acting injection for HIV prevention
+    moveto: 5
+    href: #two
+    toc: 2
+
+  - desktop: Emerging leader in India makes lasting connections
+    mobile: An emerging entrepreneur in India
+    moveto: 6
+    href: #three
+    toc: 3
+
+  - desktop: Expanding contraceptive access and choice for women
+    mobile: Expanding contraceptive access
+    moveto: 8
+    href: #four
+    toc: 4
+
+  - desktop: Data drives student success in America's heartland
+    mobile: Data supports U.S. student success
+    moveto: 9
+    href: #five
+    toc: 5
+
+  - desktop: Bringing TB prevention and care into communities in Mozambique
+    mobile: Community TB prevention and care
+    moveto: 11
+    href: #six
+    toc: 6
+
+  - desktop: A multisectoral approach transforms nutrition in Tanzania
+    mobile: Transforming nutrition in Tanzania
+    moveto: 12
+    href: #seven
+    toc: 7
+
+  - desktop: Supporting Myanmar's democratic transition
+    mobile: Supporting democracy in Myanmar
+    moveto: 13
+    href: #eight
+    toc: 8
+
+  - desktop: University degree program prepares Afghan students for tomorrow's jobs
+    mobile: University degree program for Afghans
+    moveto: 14
+    href: #nine
+    toc: 9
+
+  - desktop: Technology to drive better outcomes
+    mobile: Technology drives better outcome
+    moveto: 16
+    href: #ten
+    toc: 101
 ---
 
 {{#extend "base"}}
