update sections to pull from sectionData WIP

--- a/markup/index.hbs
+++ b/markup/index.hbs
@@ -4,9 +4,9 @@ bodyclass:
 language: en
 meta:
   url: REPLACE ME WITH PRODUCTION URL
-  title: CATALYZE FHI 360's 2017 Annual Report
-  description: In science, a catalyst ignites a chemical reaction. When applied to human development, a catalyst is the spark that transforms an idea into a solution. In this year's annual report, we share some of the many ways FHI 360 is working with partners to catalyze positive change in the United States and around the world.
-  keywords: FHI 360 Annual Report 2017,Catalyze,Global transformative change,Samira Saeed Mouawwad,Injectable cabotegravir,Yatin Thakur,Sino-implant,Jennifer Carlson,CB-DOTS,Obey Assery,Democracy in Myanmar,Yosouf Jami,Mobile money in Liberia
+  title: FHI 360's 2018 Annual Report
+  description: description
+  keywords: FHI 360 Annual Report 2018
   robots: index, follow
 scripts:
   - https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js
@@ -19,68 +19,146 @@ stylesheets:
   - https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css
   - https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.css
   - ../scss/index.scss
-title: CATALYZE FHI 360's 2017 Annual Report
+title: FHI 360's 2018 Annual Report
 uri: /
-toc_titles:
-  - desktop: A beekeeper uses new skills to build a thriving business in Jordan
-    mobile: A beekeeper in Jordan builds her business
-    moveto: 3
-    href: #one
-    toc: 1
+sectionData:
+  - name: TB (Zambia)
+    title: State-of-the-art TB control
+    subtitle: | 
+                <h3>Linda Musonda</h3>
+                <h3>Zambia</h3>
+    photoCredit: Mbuto Machili/FHI 360
+    image: TB_FHI360-Zambia[UTH]62_web.jpg
+    caption: imageCaption caption
+    toc:
+      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
+        mobile: A beekeeper in Jordan builds her business
+        href: #one
+        toc: 1
+  - name: Career Centers (Morocco)
+    title: "You’re hired: 21st-century career centers"
+    subtitle: | 
+                <h3>Kenza Elbouazzaoui</h3>
+                <h3>Morocco</h3>
+    photoCredit: Amira Azzouzi/FHI 360
+    image: asdf.jpg
+    caption: imageCaption caption
+    toc:
+      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
+        mobile: A beekeeper in Jordan builds her business
+        href: #one
+        toc: 1
+  - name: Compass Rose (USA)
+    title: Youth get a second chance Christopher C.
+    subtitle: <h3>United States</h3> 
+    photoCredit: Leanne Gray/FHI 360
+    image: Compass Rose_web.jpg
+    caption: imageCaption caption
+    toc:
+      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
+        mobile: A beekeeper in Jordan builds her business
+        href: #one
+        toc: 1
+  - name: Yemen
+    title: An integrated response addresses urgent needs 
+    subtitle: <h3>Yemen</h3>
+    photoCredit: Andrew Renneisen/Stringer/Getty Image
+    image: Yemen_GettyImages-1042306644_web.jpg
+    caption: imageCaption caption
+    toc:
+      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
+        mobile: A beekeeper in Jordan builds her business
+        href: #one
+        toc: 1
+  - name: SHIFT (Vietnam)
+    title: Leading the way in financing the HIV response
+    subtitle: <h3>Vietnam</h3>
+    photoCredit: Vu Ngoc Dung/FHI 360
+    image: SHIFT 8997_web.jpg
+    caption: imageCaption caption
+    toc:
+      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
+        mobile: A beekeeper in Jordan builds her business
+        href: #one
+        toc: 1
+  - name: DREAMS (Zimbabwe)
+    title: Girl power Jane Nyathi
+    subtitle: <h3>Zimbabwe</h3>
+    photoCredit: Leanne Gray/FHI 360
+    image: Dreams 536_web.jpg
+    caption: imageCaption caption
+    toc:
+      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
+        mobile: A beekeeper in Jordan builds her business
+        href: #one
+        toc: 1
+  - name: NTD’s (Laos)
+    title: Moving closer to wiping out neglected diseases
+    subtitle: <h3>Laos</h3>
+    photoCredit: Hadynyah/Getty Images
+    image: NTDs_GettyImages-940751048_web.jpg
+    caption: imageCaption caption
+    toc:
+      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
+        mobile: A beekeeper in Jordan builds her business
+        href: #one
+        toc: 1
+  - name: RANA (Nigeria)
+    title: Literacy improved through local language learning
+    subtitle: <h3>Nigeria</h3>
+    photoCredit: Kunle Lawal/FHI 360
+    image: asdf.jpg
+    caption: imageCaption caption
+    toc:
+      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
+        mobile: A beekeeper in Jordan builds her business
+        href: #one
+        toc: 1
+  - name: Ventures
+    title: FHI Ventures is launched to scale impact
+    subtitle: 
+    photoCredit: TBD
+    image: asdf.jpg
+    caption: imageCaption caption
+    toc:
+      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
+        mobile: A beekeeper in Jordan builds her business
+        href: #one
+        toc: 1
+  - name: CTI
+    title: Groundbreaking contraceptive technologies
+    subtitle:
+    photoCredit: Leanne Gray/FHI 360
+    image: CTI-microneedlepatch_web.jpg
+    caption: imageCaption caption
+    toc:
+      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
+        mobile: A beekeeper in Jordan builds her business
+        href: #one
+        toc: 1
+  - name: AMD (Ethiopia & Mozambique)
+    title: Evidence to avert maternal and newborn deaths
+    subtitle: <h3>Ethiopia and Mozambique</h3>
+    photoCredit: © UNICEF Ethiopia/2013/Tsegaye
+    image: Digital AMDD_8427009988_ba45a790c2_o_web.jpg
+    caption: imageCaption caption
+    toc:
+      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
+        mobile: A beekeeper in Jordan builds her business
+        href: #one
+        toc: 1
+  - name: Data Drives impact (Tanzania & Zanzibar)
+    title: Data drives impact 
+    subtitle: <h3>Tanzania and Zanzibar</h3>
+    photoCredit: Sergio Somerville/FHI 360
+    image: ar2018-m360-mobileapp_web.jpg
+    caption: imageCaption caption
+    toc:
+      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
+        mobile: A beekeeper in Jordan builds her business
+        href: #one
+        toc: 1
 
-  - desktop: Long-acting injection shows promise for HIV prevention
-    mobile: Long-acting injection for HIV prevention
-    moveto: 5
-    href: #two
-    toc: 2
-
-  - desktop: Emerging leader in India makes lasting connections
-    mobile: An emerging entrepreneur in India
-    moveto: 6
-    href: #three
-    toc: 3
-
-  - desktop: Expanding contraceptive access and choice for women
-    mobile: Expanding contraceptive access
-    moveto: 8
-    href: #four
-    toc: 4
-
-  - desktop: Data drives student success in America's heartland
-    mobile: Data supports U.S. student success
-    moveto: 9
-    href: #five
-    toc: 5
-
-  - desktop: Bringing TB prevention and care into communities in Mozambique
-    mobile: Community TB prevention and care
-    moveto: 11
-    href: #six
-    toc: 6
-
-  - desktop: A multisectoral approach transforms nutrition in Tanzania
-    mobile: Transforming nutrition in Tanzania
-    moveto: 12
-    href: #seven
-    toc: 7
-
-  - desktop: Supporting Myanmar's democratic transition
-    mobile: Supporting democracy in Myanmar
-    moveto: 13
-    href: #eight
-    toc: 8
-
-  - desktop: University degree program prepares Afghan students for tomorrow's jobs
-    mobile: University degree program for Afghans
-    moveto: 14
-    href: #nine
-    toc: 9
-
-  - desktop: Technology to drive better outcomes
-    mobile: Technology drives better outcome
-    moveto: 16
-    href: #ten
-    toc: 101
 ---
 
 {{#extend "base"}}
@@ -93,56 +171,34 @@ toc_titles:
       <img data-movedown src="../img/icons/arrowup-icon.svg" />
     </nav>
     <div id="fullpage">
-      <!-- Intro Slide -->
-      {{>sections/sectionintro}} 
       
-      <!-- SECTION 0 -->
-      {{>sections/section00}} 
-
-      <!-- SECTION 1 # Profile: Jordan (slide 1) -->
-      {{>sections/section01}} 
-  
-      <!-- SECTION 2 # Profile: Jordan (slide 2) -->
-      {{>sections/section02}} 
-  
-      <!-- SECTION 3 # Example: HPTN -->
-      {{>sections/section03}} 
-  
-      <!-- SECTION 4 # Profile: India/IVLP (slide 1) -->
-      {{>sections/section04}} 
-  
-      <!-- SECTION 5 # Profile: India/IVLP (slide 2)-->
-      {{>sections/section05}}
-  
-       <!-- SECTION 6 # Example: Sino-implant (II) -->
-      {{>sections/section06}} 
-  
-      <!-- SECTION 7 # Profile: Succeed 2020 (slide 1) -->
-      {{>sections/section07}} 
-  
-      <!-- SECTION 8 # Profile: Succeed 2020 (slide 2) -->
-      {{>sections/section08}} 
-  
-      <!-- SECTION 9 # Example: TB -->
-      {{>sections/section09}} 
-      
-      <!-- SECTION 10 # Profile: Tanzania -->
-      {{>sections/section10}} 
-
-      <!-- SECTION 11 # Example: Myanmar -->
-      {{>sections/section11}} 
-
-      <!-- SECTION 12 # Profile: Afghanistan (slide 1) -->
-      {{>sections/section12}} 
-
-      <!-- SECTION 13 # Profile: Afghanistan (slide 2) -->
-      {{>sections/section13}} 
-
-      <!-- SECTION 14 # Example: mSTAR -->
-      {{>sections/section14
-      }} 
-      <!-- # Learn More -->
-      {{>sections/section15}}
-    </div>
-  {{/content}}
+      {{> sections/ceo-letter sectionIndex=1 }}
+      {{!-- TB (Zambia) --}}
+      {{> sections/tb sectionIndex=2 }}
+      {{!-- Career Centers (Morocco)--}}
+      {{> sections/career-centers sectionIndex=3 }}
+      {{!-- Compass Rose (USA) --}}
+      {{> sections/yemen sectionIndex=4 }}
+      {{!-- Yemen --}}
+      {{> sections/compass-rose sectionIndex=5 }}
+      {{!-- SHIFT (Vietnam) --}}
+      {{> sections/shift sectionIndex=6 }}
+      {{!-- DREAMS (Zimbabwe) --}}
+      {{> sections/dreams sectionIndex=7 }}
+      {{!-- NTD’s (Laos) --}}
+      {{> sections/ventures sectionIndex=8 }}
+      {{!-- RANA (Nigeria) --}}
+      {{> sections/cti sectionIndex=9 }}
+      {{!-- Ventures --}}
+      {{> sections/rana sectionIndex=10 }}
+      {{!-- CTI --}}
+      {{> sections/dig-solution sectionIndex=11 }}
+      {{!-- AMD (Ethiopia & Mozambique) --}}
+      {{> sections/ntds sectionIndex=12 }}
+      {{!-- Data Drives impact (Tanzania & Zanzibar) --}}
+      {{> sections/digital-amdd sectionIndex=13 }}
+      {{!-- Learn More --}}
+      {{> sections/learn-more sectionIndex=14 }}
+    </div>  
+    {{/content}}
 {{/extend}}
